--- a/css/styles.css
+++ b/css/styles.css
@@ -516,10 +516,9 @@ footer {
 }
 .container.footer {
   display: flex;
+  justify-content: space-between;
 }
-.left {
-  margin-right: 70px;
-}
+
 .right {
   display: block;
   padding-top: 12px;
@@ -591,7 +590,7 @@ footer {
 /* -----------форма футер----------- */
 .footer-form {
   padding-top: 12px;
-  margin-left: 93px;
+  /* margin-left: 93px; */
 }
 .footer-form_input {
   padding-left: 16px;
@@ -611,32 +610,32 @@ footer {
   line-height: 1.25;
   color: rgba(255, 255, 255, 0.6);
 }
-.footer_form-btn{
-	position: relative;
-	height: 50px;
-	padding: 10px 62px 10px 29px;
-	margin-left: 12px;
-	border-radius: 4px;
-	background-color: var(--accent-color);
-font-family: Roboto;
-font-style: normal;
-font-weight: bold;
-font-size: 16px;
-line-height: 1.87;
-align-items: center;
-text-align: center;
-color: #FFFFFF;
+.footer_form-btn {
+  position: relative;
+  height: 50px;
+  padding: 10px 62px 10px 29px;
+  margin-left: 12px;
+  border-radius: 4px;
+  background-color: var(--accent-color);
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  align-items: center;
+  text-align: center;
+  color: #ffffff;
 }
-.footer_form-btn::after{
-	background-image: url(../imaiges-svg/icon-send.svg);
-	position: absolute;
-	top: 13px;
-	right: 28px;
-	content:" ";
-	display: block;
-	width: 24px;
-	height: 24px;
-	background-size: cover;
+.footer_form-btn::after {
+  background-image: url(../imaiges-svg/icon-send.svg);
+  position: absolute;
+  top: 13px;
+  right: 28px;
+  content: " ";
+  display: block;
+  width: 24px;
+  height: 24px;
+  background-size: cover;
   background-position: center;
 }
 
