--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -11,21 +11,22 @@
 //@import "./components/backdrop";
 //@import "./components/description";
 @import "./components/logo";
-@import "./components/modal-btn";
-@import "./components/modal";
+@import "./components/buttons";
+//@import "./components/modal-btn";
+//@import "./components/modal";
 @import "./components/section";
 @import "./components/social-links";
 //@import "./components/undertitle";
 
 //       layout
 @import "./layout/header";
-@import "./layout/hero";
-@import "./layout/list";
+//@import "./layout/hero";
+//@import "./layout/list";
 //@import "./layout/about";
 //@import "./layout/services";
-@import "./layout/work";
-@import "./layout/command";
-@import "./layout/clients";
+//@import "./layout/work";
+//@import "./layout/command";
+//@import "./layout/clients";
 @import "./layout/footer";
 @import "./layout/total";
 @import "./layout/article";
