--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -10,6 +10,12 @@
   overflow: hidden;
 }
 
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
 :root {
   --accent-color: #2196f3;
   --text-color: #757575;
@@ -335,6 +341,86 @@ li {
   margin: 0 auto;
 }
 
+.header .container {
+  display: flex;
+  align-items: center;
+}
+
+.container.footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.items {
+  margin-bottom: 50px;
+}
+
+.logo {
+  margin-right: 93px;
+}
+
+.logo {
+  font-family: Raleway, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.192;
+  letter-spacing: 0.03em;
+  color: #000000;
+}
+
+.logo-footer {
+  font-family: Raleway, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.192;
+  letter-spacing: 0.03em;
+  color: var(--active-color);
+}
+
+span {
+  color: var(--accent-color);
+}
+
+.logo-footer {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.butons {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.button-item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.btn {
+  border: 0;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.625;
+  letter-spacing: 0.03em;
+  color: var(--basic-color);
+  padding: 6px 22px;
+  height: 38px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition-property: color, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn:hover,
+.btn:focus {
+  color: var(--active-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
 .header {
   border-bottom: 1px solid #ececec;
 }
@@ -389,5 +475,328 @@ footer {
   align-items: center;
   padding-top: 94px;
   padding-bottom: 94px;
+}
+
+/* ---ШАПКА----*/
+.navigation {
+  display: flex;
+  align-items: center;
+}
+
+.site-nav {
+  display: flex;
+  align-items: center;
+}
+
+.list-site:not(:last-child) {
+  margin-right: 50px;
+}
+
+.list-site {
+  position: relative;
+}
+
+.nav {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-current::after {
+  content: "";
+  display: block;
+  background-color: var(--accent-color);
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+}
+
+.is-current::after {
+  position: absolute;
+  bottom: 0;
+}
+
+.adress-header {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+
+.mail-header,
+.phone-header {
+  display: flex;
+  align-items: center;
+}
+
+.mail-icon,
+.phone-icon {
+  fill: var(--text-color);
+  display: block;
+  margin-right: 10px;
+  cursor: pointer;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-mail,
+.nav-phone {
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-mail:focus,
+.nav-mail:hover {
+  color: var(--accent-color);
+}
+
+.nav-phone:focus,
+.nav-phone:hover {
+  color: var(--accent-color);
+}
+
+.nav-mail:focus .mail-icon,
+.nav-mail:hover .mail-icon {
+  fill: var(--accent-color);
+}
+
+.nav-phone:focus .phone-icon,
+.nav-phone:hover .phone-icon {
+  fill: var(--accent-color);
+}
+
+.nav-mail {
+  margin-right: 50px;
+}
+
+.nav.is-current {
+  color: var(--accent-color);
+}
+
+.nav:hover,
+.nav:focus {
+  color: var(--accent-color);
+}
+
+.nav-mail,
+.nav-phone {
+  display: flex;
+  align-items: center;
+  font-style: normal;
+  color: var(--text-color);
+}
+
+/*--footer--*/
+.right {
+  display: block;
+  padding-top: 12px;
+}
+
+.icons-right {
+  display: flex;
+  justify-content: space-between;
+}
+
+.icon:not(:last-child) {
+  margin-right: 10px;
+}
+
+.link-right:hover,
+.link-right:focus {
+  background-color: var(--accent-color);
+}
+
+.link-right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-right {
+  fill: var(--active-color);
+  width: 20px;
+  height: 20px;
+}
+
+.text-footer {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  color: var(--active-color);
+  margin-bottom: 9px;
+}
+
+.footer-mail,
+.footer-phone {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-mail {
+  margin-bottom: 9px;
+}
+
+.title-right {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: var(--active-color);
+  margin-bottom: 20px;
+}
+
+/* -----------форма футер----------- */
+.footer-form {
+  padding-top: 12px;
+  /* margin-left: 93px; */
+}
+
+.footer-form_input {
+  padding-left: 16px;
+  color: var(--active-color);
+  width: 358px;
+  height: 50px;
+  background-color: var(--hero-color);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.footer-form-labe::placeholder {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer_form-btn {
+  position: relative;
+  height: 50px;
+  padding: 10px 62px 10px 29px;
+  margin-left: 12px;
+  border-radius: 4px;
+  background-color: var(--accent-color);
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  align-items: center;
+  text-align: center;
+  color: #ffffff;
+}
+
+.footer_form-btn::after {
+  background-image: url(../imaiges-svg/icon-send.svg);
+  position: absolute;
+  top: 13px;
+  right: 28px;
+  content: " ";
+  display: block;
+  width: 24px;
+  height: 24px;
+  background-size: cover;
+  background-position: center;
+}
+
+.article {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -30px;
+  margin-left: -30px;
+}
+
+.article-item {
+  display: block;
+  margin-left: 30px;
+  margin-top: 30px;
+  flex-basis: calc(100% / 3-33px);
+}
+
+.article-item-link {
+  display: block;
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.article-item-link {
+  display: block;
+}
+
+.img {
+  position: relative;
+  display: block;
+  overflow: hidden;
+}
+
+.overlay {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.55;
+  color: var(--active-color);
+  background-color: rgba(33, 150, 243, 0.9);
+  padding: 63px 24px;
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.article-item-link:hover .overlay,
+.article-item-link:focus .overlay {
+  transform: translateY(0%);
+}
+
+.article-item-link:hover,
+.article-item-link:focus {
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+}
+
+.item {
+  padding: 20px 24px;
+  border: 1px solid #eae2e2;
+  border-top: none;
+}
+
+.article-caption {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--basic-color);
+  padding-bottom: 4px;
+}
+
+.text {
+  color: var(--text-color);
 }
 /*# sourceMappingURL=portfolio.css.map */
