--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,25 +8,28 @@
 @import "./base/container";
 
 //       components
-//@import "./components/backdrop";
-//@import "./components/description";
 @import "./components/logo";
-@import "./components/modal-btn";
 @import "./components/modal";
 @import "./components/section";
 @import "./components/social-links";
-//@import "./components/undertitle";
+@import "./components/undertitle";
+@import "./components/list";
+@import "./components/features";
+//@import "./components/backdrop";
+//@import "./components/description";
+//@import "./components/modal-btn";
 
 //       layout
 @import "./layout/header";
 @import "./layout/hero";
-@import "./layout/list";
-//@import "./layout/about";
-//@import "./layout/services";
 @import "./layout/work";
 @import "./layout/command";
 @import "./layout/clients";
 @import "./layout/footer";
 @import "./layout/total";
 @import "./layout/article";
+//@import "./layout/about";
+//@import "./layout/services";
+//@import "./layout/about";
+//@import "./layout/services";
 //@import "./layout/contact";
