--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -2,11 +2,9 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
-}
-.button-item:not(:last-child) {
-  margin-right: 8px;
-}
-.btn {
+  .button-item:not(:last-child) {
+  margin-right: 8px;}
+  .btn {
   border: 0;
   font-size: 16px;
   font-weight: 500;
@@ -20,10 +18,14 @@
   transition-property: color, background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.btn:hover,
-.btn:focus {
+  &:hover,
+  &:focus {
   color: var(--active-color);
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+}
+}
+
+
+
