--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,56 +1,52 @@
-.list-item:not(:last-child) {
-  margin-right: 30px;
-}
-.list-item {
+
+.list-article {
+	display: flex;
+	.list-item {
   width: 270px;
-}
-.list-item::before {
-  content: "";
-  display: block;
-  background-color: #f5f4fa;
-  width: 270px;
-  height: 120px;
-  margin-top: 94px;
-  margin-bottom: 30px;
-}
+   &:not(:last-child) {
+	margin-right: 30px;}
+   &::before {
+		content: "";
+		display: block;
+		background-color: #f5f4fa;
+		width: 270px;
+		height: 120px;
+		margin-top: 94px;
+		margin-bottom: 30px;
+	 }
+   .list-caption {
+		font-weight: 700;
+		font-size: 14px;
+		letter-spacing: 0.03em;
+		text-transform: uppercase;
+		color: var(--basic-color);
+		margin-bottom: 10px;
+	 }
+	.text-list {
+		font-style: normal;
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 1.714;
+		letter-spacing: 0.03em;
+		color: var(--text-color);
+	 }
+	}
+ }
 .antenna::before {
   background-image: url(../imaiges-svg/antenna-1.svg);
-  background-size: 70px;
-  background-repeat: no-repeat;
-  background-position: center;
+  @extend %before;
 }
 .diagram::before {
   background-image: url(../imaiges-svg/diagram-1.svg);
-  background-size: 70px;
-  background-repeat: no-repeat;
-  background-position: center;
+  @extend %before;
 }
 .astronaut::before {
   background-image: url(../imaiges-svg/astronaut-1.svg);
-  background-size: 70px;
-  background-repeat: no-repeat;
-  background-position: center;
+  @extend %before;
 }
 
 .clock::before {
   background-image: url(../imaiges-svg/clock-1.svg);
-  background-size: 70px;
-  background-repeat: no-repeat;
-  background-position: center;
+  @extend %before;
 }
-.list-caption {
-  font-weight: 700;
-  font-size: 14px;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--basic-color);
-  margin-bottom: 10px;
-}
-.text-list {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.714;
-  letter-spacing: 0.03em;
-  color: var(--text-color);
-}
+
