--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -7,12 +7,14 @@
   left: 0;
   background-color: rgba(0, 0, 0, 0.2);
   transition: all 250ms linear;
-}
-.backdrop.is-hidden .modal {
+  &.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0);
 }
-/* --------форма------------ */
-.modal {
+}
+
+/* --------------форма--------- */
+
+ .modal {
   padding: 40px;
   position: absolute;
   top: 50%;
@@ -22,10 +24,7 @@
   min-height: 581px;
   background-color: var(--active-color);
   transition: transform 250ms linear;
-}
-
-/*              кнопка формы           */
-.close-btn {
+  .close-btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -39,12 +38,11 @@
   background-color: var(--active-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
-}
-.close-btn:hover .icon-close {
+  &:hover .icon-close {
   fill: var(--accent-color);
 }
+}
 
-/* --------------форма--------- */
 .modal-title {
   font-family: Roboto;
   font-style: normal;
@@ -55,15 +53,13 @@
   color: var(--basic-color);
   margin-bottom: 12px;
 }
-.modal_form {
-  display: flex;
-  flex-direction: column;
-}
-.modal_form-span {
-  display: block;
-  position: relative;
-  margin-top: 4px;
-}
+// .modal_form {
+//   display: flex;
+//   flex-direction: column;
+  
+  
+// }
+
 .modal_form-input {
   width: 100%;
   height: 40px;
@@ -72,6 +68,15 @@
   padding-left: 42px;
   cursor: pointer;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+  &:hover + .modal_form-icon,
+  &:focus + .modal_form-icon {
+  fill: var(--accent-color);
+}
 }
 .modal_form-label {
   display: block;
@@ -83,6 +88,12 @@
   font-size: 12px;
   line-height: 1.16;
   color: #757575;
+  .modal_form-span {
+	display: block;
+	position: relative;
+	margin-top: 4px;
+
+ }
 }
 .modal_form-icon {
   position: absolute;
@@ -91,15 +102,7 @@
   left: 12px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal_form-input:hover,
-.modal_form-input:focus {
-  outline: none;
-  border-color: var(--accent-color);
-}
-.modal_form-input:hover + .modal_form-icon,
-.modal_form-input:focus + .modal_form-icon {
-  fill: var(--accent-color);
-}
+
 
 .modal_form-feedack {
   width: 100%;
@@ -110,13 +113,14 @@
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 12px 16px;
   resize: none;
-}
-
-.modal_form-feedack:hover,
-.modal_form-feedack:focus {
+  &:hover,
+  &:focus {
   outline: none;
   border-color: var(--accent-color);
 }
+}
+
+
 
 .modal_form-feedack::placeholder {
   font-family: Roboto;
@@ -174,5 +178,5 @@
   text-align: center;
   color: #ffffff;
   background-color: var(--accent-color);
-  border-radius: 4px;
+  border-radius: 4px;}
 }
