--- a/sass/layout/_article.scss
+++ b/sass/layout/_article.scss
@@ -3,21 +3,27 @@
   flex-wrap: wrap;
   margin-top: -30px;
   margin-left: -30px;
-}
-.article-item {
-  display: block;
-  margin-left: 30px;
-  margin-top: 30px;
-  flex-basis: calc(100% / 3-33px);
-}
-.article-item-link {
-  display: block;
-  transition-property: box-shadow;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.article-item-link {
-  display: block;
+  .article-item {
+    display: block;
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc(100% / 3-33px);
+    .article-item-link {
+      display: block;
+      transition-property: box-shadow;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+      &:hover .overlay,
+      &:focus .overlay {
+        transform: translateY(0%);
+      }
+      &:hover,
+      &:focus {
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+        cursor: pointer;
+      }
+    }
+  }
 }
 .img {
   position: relative;
@@ -42,28 +48,20 @@
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.article-item-link:hover .overlay,
-.article-item-link:focus .overlay {
-  transform: translateY(0%);
-}
-.article-item-link:hover,
-.article-item-link:focus {
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  cursor: pointer;
-}
+
 .item {
   padding: 20px 24px;
   border: 1px solid #eae2e2;
   border-top: none;
-}
-.article-caption {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  color: var(--basic-color);
-  padding-bottom: 4px;
-}
-.text {
-  color: var(--text-color);
+  .article-caption {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    color: var(--basic-color);
+    padding-bottom: 4px;
+  }
+  .text {
+    color: var(--text-color);
+  }
 }
