--- a/sass/layout/_command.scss
+++ b/sass/layout/_command.scss
@@ -1,20 +1,23 @@
 /* ------секция 4--------------- */
-.command {
-  padding-top: 94px;
-  padding-bottom: 94px;
-  background-color: #f5f4fa;
-}
 .command-list {
   display: flex;
   align-items: center;
   text-align: center;
+  .command-article:not(:last-child) {
+    margin-right: 30px;
+  }
+  .command-article {
+    background-color: var(--active-color);
+    border-radius: 0px 0px 4px 4px;
+    .social-list {
+      display: flex;
+      justify-content: center;
+      margin-top: 16px;
+      margin-bottom: 30px;
+    }
+  }
 }
-.social-list {
-  display: flex;
-  justify-content: center;
-  margin-top: 16px;
-  margin-bottom: 30px;
-}
+
 .social-link {
   display: flex;
   justify-content: center;
@@ -27,16 +30,17 @@
   transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  &:focus,
+  &:hover {
+    background-color: var(--accent-color);
+  }
+  &:focus .social-icon,
+  &:hover .social-icon {
+    fill: var(--active-color);
+  }
 }
 /* ДИНАМИКА ЦВЕТА ССЫЛКИ И КАРТИНКИ */
-.social-link:focus,
-.social-link:hover {
-  background-color: var(--accent-color);
-}
-.social-link:focus .social-icon,
-.social-link:hover .social-icon {
-  fill: var(--active-color);
-}
+
 /* -------------------------- */
 .social-icon {
   width: 20px;
@@ -45,13 +49,6 @@
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.command-article:not(:last-child) {
-  margin-right: 30px;
-}
-.command-article {
-  background-color: var(--active-color);
-  border-radius: 0px 0px 4px 4px;
 }
 
 .command-subject {
