--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -1,11 +1,12 @@
 /*--секция 3 --*/
-.work-img:not(:last-child) {
-  margin-right: 30px;
-}
+.work {
+	padding-bottom: 94px;
+ }
 .work-img {
   position: relative;
-}
-.img-text {
+  &:not(:last-child) {
+  margin-right: 30px;}
+  .img-text {
   position: absolute;
   width: 100%;
   height: 70px;
@@ -15,3 +16,5 @@
   padding: 27px 82px;
   bottom: 0;
 }
+}
+
