--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
 //       utils
 @import "./utils/visually-hiden";
 @import "./utils/variables";
-//@import "./utils/mixins";
+@import "./utils/mixins";
 
 //       base
 @import "./base/common";
