--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -53,7 +53,11 @@
     align-items: center;
   }
 }
-
+.mail-header,
+.phone-header {
+  display: flex;
+  align-items: center;
+}
 .mail-icon,
 .phone-icon {
   fill: var(--text-color);
@@ -80,12 +84,12 @@
   &:hover .phone-icon {
   fill: var(--accent-color);
 }
-
-  .nav-mail {
-  margin-right: 50px;
+}
+.nav-mail {
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  margin-right: 50px;
   display: flex;
   align-items: center;
   font-style: normal;
@@ -95,7 +99,7 @@
   fill: var(--accent-color);}
   &:focus,
   &:hover {
-  color: var(--accent-color);}
+  color: var(--accent-color);
 }
 }
 
