--- a/css/main.css
+++ b/css/main.css
@@ -865,9 +865,10 @@ footer {
 .command-list .command-article {
   background-color: var(--active-color);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-.command-list .command-article .social-list {
+.command-list .social-list {
   display: flex;
   justify-content: center;
   margin-top: 16px;
