--- a/sass/layout/_command.scss
+++ b/sass/layout/_command.scss
@@ -8,7 +8,8 @@
   }
   .command-article {
     background-color: var(--active-color);
-    border-radius: 0px 0px 4px 4px;
+	 border-radius: 0px 0px 4px 4px;
+	 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);}
     .social-list {
       display: flex;
       justify-content: center;
@@ -16,7 +17,7 @@
       margin-bottom: 30px;
     }
   }
-}
+
 
 .social-link {
   display: flex;
